# pan-prime-check

./: README.md  go.mod  main.go
go/: README.md
pan/: check.go
python/: Pipfile  README.md  main.py  pyproject.toml
python/pan/: __init__.py  check.py  test_check.py
